--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -28,27 +34,73 @@
         </a>
       </div>
       <div class="navigation" id="nav">
-        <div class="card card-one">
-          <h2>
-            <span class="darkText">Who am </span>I<span class="darkText"
-              >?</span
-            >
-          </h2>
-        </div>
-        <div class="card card-two">
-          <h2>
-            <span class="darkText">What do I </span>know<span class="darkText"
-              >?</span
-            >
-          </h2>
-        </div>
-        <div class="card card-three">
-          <h2>
-            <span class="darkText">What have I </span>done<span class="darkText"
-              >?</span
-            >
-          </h2>
-        </div>
+        <a href="#about">
+          <div class="card card-orange">
+            <h2>
+              <span class="darkText">Who am </span>I<span class="darkText"
+                >?</span
+              >
+            </h2>
+          </div>
+        </a>
+        <a href="#tech">
+          <div class="card card-blue">
+            <h2>
+              <span class="darkText">What do I </span>know<span class="darkText"
+                >?</span
+              >
+            </h2>
+          </div>
+        </a>
+        <a href="#projects">
+          <div class="card card-green">
+            <h2>
+              <span class="darkText">What have I </span>done<span
+                class="darkText"
+                >?</span
+              >
+            </h2>
+          </div>
+        </a>
+      </div>
+      <div class="about" id="about">
+        <p class="about-copy">
+          <span class="orangeText">Lorem</span> ipsum, dolor sit amet
+          consectetur adipisicing elit. Quod voluptatibus ab eligendi
+          consequuntur minima deserunt magni impedit, iste unde dolore aperiam
+          vitae doloremque rem atque ipsa ex. Veritatis, placeat consequatur.
+          <a href="#nav">
+            <div class="card card-orange card-round">
+              <p>&uarr;</p>
+            </div>
+          </a>
+        </p>
+      </div>
+      <div class="tech" id="tech">
+        <p class="tech-copy">
+          <span class="blueText">Lorem</span> ipsum, dolor sit amet consectetur
+          adipisicing elit. Quod voluptatibus ab eligendi consequuntur minima
+          deserunt magni impedit, iste unde dolore aperiam vitae doloremque rem
+          atque ipsa ex. Veritatis, placeat consequatur.
+          <a href="#nav">
+            <div class="card card-blue card-round">
+              <p>&uarr;</p>
+            </div>
+          </a>
+        </p>
+      </div>
+      <div class="projects" id="projects">
+        <p class="projects-copy">
+          <span class="greenText">Lorem</span> ipsum, dolor sit amet consectetur
+          adipisicing elit. Quod voluptatibus ab eligendi consequuntur minima
+          deserunt magni impedit, iste unde dolore aperiam vitae doloremque rem
+          atque ipsa ex. Veritatis, placeat consequatur.
+          <a href="#nav">
+            <div class="card card-green card-round">
+              <p>&uarr;</p>
+            </div>
+          </a>
+        </p>
       </div>
     </div>
   </body>
