added round nav buttons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
@@ -70,9 +68,7 @@
           consequuntur minima deserunt magni impedit, iste unde dolore aperiam
           vitae doloremque rem atque ipsa ex. Veritatis, placeat consequatur.
           <a href="#nav">
-            <div class="card card-orange card-round">
-              <p>&uarr;</p>
-            </div>
+            <div class="card card-orange card-round">&uarr;</div>
           </a>
         </p>
       </div>
