added joli project

--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
                   <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item">
                 </div>
               </a>
-              <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" >
+              <a href="https://jameslyddon.github.io/joli/" >
                 <div class="card-proj card-blue">
-                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item">
+                  <img src="img/joli.png" alt="joli studios preview"  class="proj-item">
                 </div>
               </a>
               <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" >
