added noopener to links

--- a/index.html
+++ b/index.html
@@ -232,22 +232,22 @@
             <div class="projects-container">
               <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" >
                 <div class="card-proj card-orange">
-                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noreferrer">
+                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noopener noreferrer">
                 </div>
               </a>
               <a href="https://jameslyddon.github.io/joli/" >
                 <div class="card-proj card-blue">
-                  <img src="img/joli.png" alt="joli studios preview"  class="proj-item" target="_blank" rel="noreferrer">
+                  <img src="img/joli.png" alt="joli studios preview"  class="proj-item" target="_blank" rel="noopener noreferrer">
                 </div>
               </a>
               <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" >
                 <div class="card-proj card-green">
-                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noreferrer">
+                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noopener noreferrer">
                 </div>
               </a>
               <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" >
                 <div class="card-proj card-iris">
-                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noreferrer">
+                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noopener noreferrer">
                 </div>
               </a>
             </div>
