added rachel blog to projects

--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
                   <img src="img/joli.png" alt="joli studios preview"  class="proj-item" target="_blank" rel="noopener noreferrer">
                 </div>
               </a>
-              <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" >
+              <a href="https://rachel-blog.vercel.app/" >
                 <div class="card-proj card-green">
-                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noopener noreferrer">
+                  <img src="img/rachelblog.png" alt="rachel blog"  class="proj-item" target="_blank" rel="noopener noreferrer">
                 </div>
               </a>
               <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" >
