--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>James Lyddon Porto</title>
   </head>
   <body>
     <div id="particle-container">
@@ -230,9 +230,9 @@
           <p class="projects-copy">
             <span class="greenText">Here are some of the projects</span> I've worked on since 2020.
             <div class="projects-container">
-              <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" >
+              <a alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" >
                 <div class="card-proj card-orange">
-                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noopener noreferrer">
+                  <img src="img/hiitgizmo.png" >
                 </div>
               </a>
               <a href="https://jameslyddon.github.io/joli/" >
