fixed anchor tag

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <p class="projects-copy">
             <span class="greenText">Here are some of the projects</span> I've worked on since 2020.
             <div class="projects-container">
-              <a alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" >
+              <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noopener noreferrer"  >
                 <div class="card-proj card-orange">
                   <img src="img/hiitgizmo.png" >
                 </div>
