--- a/index.html
+++ b/index.html
@@ -232,22 +232,22 @@
             <div class="projects-container">
               <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noopener noreferrer"  >
                 <div class="card-proj card-orange">
-                  <img src="img/hiitgizmo.png" >
+                  <img src="img/hiitgizmo.png" alt="joli studios preview"  class="proj-item">
                 </div>
               </a>
-              <a href="https://jameslyddon.github.io/joli/" >
+              <a href="https://jameslyddon.github.io/joli/" target="_blank" rel="noopener noreferrer">
                 <div class="card-proj card-blue">
-                  <img src="img/joli.png" alt="joli studios preview"  class="proj-item" target="_blank" rel="noopener noreferrer">
+                  <img src="img/joli.png" alt="joli studios preview"  class="proj-item" >
                 </div>
               </a>
-              <a href="https://rachel-blog.vercel.app/" >
+              <a href="https://rachel-blog.vercel.app/" target="_blank" rel="noopener noreferrer" >
                 <div class="card-proj card-green">
-                  <img src="img/rachelblog.png" alt="rachel blog"  class="proj-item" target="_blank" rel="noopener noreferrer">
+                  <img src="img/rachelblog.png" alt="rachel blog"  class="proj-item" >
                 </div>
               </a>
-              <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" >
+              <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" target="_blank" rel="noopener noreferrer">
                 <div class="card-proj card-iris">
-                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item" target="_blank" rel="noopener noreferrer">
+                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item" >
                 </div>
               </a>
             </div>
