--- a/index.html
+++ b/index.html
@@ -39,24 +39,27 @@
       <div class="particle"></div>
       <div class="container">
         <nav class="navbar">
-          <a href="mailto:jameslyddon@gmail.com" class="icon card-icon card-iris">
+          <a href="mailto:jameslyddon@gmail.com" class="icon card-icon card-iris" target="_blank" rel="noopener noreferrer">
             <img src="svg/email.svg" alt="email icon" width="20px" />
           </a>
           <a
             href="https://codepen.io/jameslyddon"
             class="icon card-icon card-green"
+            target="_blank" rel="noopener noreferrer"
           >
             <img src="svg/codepen.svg" alt="codepen icon" width="20px" />
           </a>
           <a
             href="https://linkedin.com/in/james-lyddon"
             class="icon card-icon card-blue"
+            target="_blank" rel="noopener noreferrer"
           >
             <img src="svg/linkedin.svg" alt="linkedin icon" width="20px" />
           </a>
           <a
             href="https://github.com/JamesLyddon"
             class="icon card-icon card-orange"
+            target="_blank" rel="noopener noreferrer"
           >
             <img src="svg/github.svg" alt="github icon" width="20px" />
           </a>
