added headphone store

--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
                   <img src="img/rachelblog.png" alt="rachel blog"  class="proj-item" >
                 </div>
               </a>
-              <a href="https://play.google.com/store/apps/details?id=com.JuGiGo.HiitMe&gl=GB" target="_blank" rel="noopener noreferrer">
+              <a href="https://ecommerce-sepia-beta.vercel.app/" target="_blank" rel="noopener noreferrer">
                 <div class="card-proj card-iris">
-                  <img src="img/hiitgizmo.png" alt="hiit gizmo app image"  class="proj-item" >
+                  <img src="img/headphone-store.png" alt="hiit gizmo app image"  class="proj-item" >
                 </div>
               </a>
             </div>
