feat: added link to updated portfolio

--- a/index.html
+++ b/index.html
@@ -67,13 +67,15 @@
         <div class="intro">
           <a href="#nav">
             <div class="title">
-              <h1>
+              <h1 style="text-decoration: line-through;">
                 <span class="orangeText">Hi</span>! I'm
                 <span class="blueText">James Lyddon</span> and I'm a
                 <span class="greenText">front-end</span> <span class="irisText"> web developer</span>.
               </h1>
             </div>
           </a>
+
+          <a href="https://james-lyddon-portfolio-2023.vercel.app/"><span class="blueText"><h1>Visit new portfolio!</h1></span></a>
         </div>
         <div class="particle"></div>
         <div class="particle"></div>
